--- a/06. Naver API.ipynb
+++ b/06. Naver API.ipynb
@@ -33,8 +33,8 @@
     "    - 환경추가 \n",
     "        - WEB 설정 \n",
     "        - http://localhost\n",
-    "    - Clienct ID: H2_6lcavpVyHW8211rUq\n",
-    "    - Clienct Secret: D1XBjnKTe9\n",
+    "    - Clienct ID: \n",
+    "    - Clienct Secret: \n",
     "    - https://developers.naver.com/apps/#/myapps/H2_6lcavpVyHW8211rUq/overview "
    ]
   },
