--- a/06. Naver API.ipynb
+++ b/06. Naver API.ipynb
@@ -582,8 +582,8 @@
     "import sys\n",
     "import urllib.request\n",
     "\n",
-    "client_id = \"H2_6lcavpVyHW8211rUq\"\n",
-    "client_secret = \"D1XBjnKTe9\"\n",
+    "client_id = \"\"\n",
+    "client_secret = \"\"\n",
     "\n",
     "encText = urllib.parse.quote(\"파이썬\")\n",
     "url = \"https://openapi.naver.com/v1/search/movie?query=\" + encText # json 결과\n",
@@ -717,8 +717,8 @@
     "import sys\n",
     "import urllib.request\n",
     "\n",
-    "client_id = \"H2_6lcavpVyHW8211rUq\"\n",
-    "client_secret = \"D1XBjnKTe9\"\n",
+    "client_id = \"\"\n",
+    "client_secret = \"\"\n",
     "\n",
     "encText = urllib.parse.quote(\"파이썬\")\n",
     "url = \"https://openapi.naver.com/v1/search/cafearticle?query=\" + encText # json 결과\n",
@@ -942,8 +942,8 @@
     "import sys\n",
     "import urllib.request\n",
     "\n",
-    "client_id = \"H2_6lcavpVyHW8211rUq\"\n",
-    "client_secret = \"D1XBjnKTe9\"\n",
+    "client_id = \"\"\n",
+    "client_secret = \"\"\n",
     "\n",
     "encText = urllib.parse.quote(\"파이썬\")\n",
     "url = \"https://openapi.naver.com/v1/search/shop?query=\" + encText # json 결과\n",
@@ -1075,8 +1075,8 @@
     "import sys\n",
     "import urllib.request\n",
     "\n",
-    "client_id = \"H2_6lcavpVyHW8211rUq\"\n",
-    "client_secret = \"D1XBjnKTe9\"\n",
+    "client_id = \"\"\n",
+    "client_secret = \"\"\n",
     "\n",
     "encText = urllib.parse.quote(\"파이썬\")\n",
     "url = \"https://openapi.naver.com/v1/search/encyc?query=\" + encText # json 결과\n",
@@ -1301,8 +1301,8 @@
     "import sys\n",
     "import urllib.request\n",
     "\n",
-    "client_id = \"H2_6lcavpVyHW8211rUq\"\n",
-    "client_secret = \"D1XBjnKTe9\"\n",
+    "client_id = \"\"\n",
+    "client_secret = \"\"\n",
     "\n",
     "encText = urllib.parse.quote(\"몰스킨\")\n",
     "url = \"https://openapi.naver.com/v1/search/shop?query=\" + encText # json 결과\n",
